# NES-EMULATOR

./: .gitignore  Bus.c  Bus.h  CMakeLists.txt  CPU6502.c  CPU6502.h  Emulator.c  Emulator.h  LICENSE  README.md  olc6502.c  olc6502.h  output.txt
src/: APU.c  Bus.c  Bus.h  CPU6502.c  CPU6502.h  Cartridge.c  Cartridge.h  Controller.c  Controller.h  Graphics.c  Graphics.h  NES.c  NES.h  PPU.c  PPU.h  main.c
src/Core/: APU.h  CPU6502.c  CPU6502.h  Cartridge.c  Controller.c  Controller.h  PPU.c  PPU.h
src/Core/Mappers/: Mapper3.c
src/Desktop/: Graphics.c  NES.c  NES.h
src/Mappers/: Mapper.h  Mapper0.c  Mapper1.c  Mapper2.c  Mapper3.c
src/Pocket_Beagle_2/: LinuxRender.c  LinuxRender.h  PB2.c  PB2.h  PB2_README.md  pb2_mdns_demo.md
